--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@cloudinary/react": "^1.11.2",
     "@cloudinary/url-gen": "^1.13.0",
+    "@reduxjs/toolkit": "^2.2.5",
     "contentful": "^10.6.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
     "router": "^1.3.8"
