--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@cloudinary/react": "^1.11.2",
     "@cloudinary/url-gen": "^1.13.0",
     "@reduxjs/toolkit": "^2.2.5",
+    "appwrite": "^15.0.0",
     "contentful": "^10.6.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
