--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "contentful": "^10.6.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.52.1",
     "react-redux": "^9.1.2",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
