--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.1",
+    "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
-    "router": "^1.3.8"
+    "router": "^1.3.8",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
