--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "appwrite": "^15.0.0",
     "contentful": "^10.6.10",
+    "framer-motion": "^11.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.1",
