--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.1",
+    "react-paystack": "^6.0.0",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "react-router": "^6.16.0",
