updated tests and layout

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "appwrite": "^15.0.0",
     "contentful": "^10.6.10",
     "framer-motion": "^11.3.0",
+    "nock": "^13.5.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.1",
@@ -43,6 +44,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "jsdom": "^24.1.1",
+    "msw": "^2.3.5",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "vite": "^4.4.5",
