--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "contentful": "^10.6.10",
     "framer-motion": "^11.3.0",
     "nock": "^13.5.5",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.1",
